fix submenu z-index

--- a/src/common.blocks/menu/menu__submenu.less
+++ b/src/common.blocks/menu/menu__submenu.less
@@ -2,8 +2,10 @@
 .menu__submenu{
     padding-top: 1rem;
     transition: @cubic500;
+
     @media (min-width:768px){
         position: absolute;
+        z-index: 3;
         display: flex;
         left: 0;
         padding: 0;
